Add frontend app and E2E tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .env.local
-front/
 .DS_Store
+front/node_modules
+front/.next
+front/out
+front/coverage
+front/test-results
+front/playwright-report
