--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
